--- a/02_NL_tower_inventory.adoc
+++ b/02_NL_tower_inventory.adoc
@@ -1,38 +1,31 @@
 ## Lab 2: Tower inventory
 
-In de Inventory worden alle hosts beschreven. Deze inventory kan met de hand gevuld worden (dit zullen we gebruiken in deze workshop). Het is echter een best-pratice om deze uit een bron automatisch te laten vullen (dynamic inventory). Enkele bronnen zijn:
+In de Inventory worden alle hosts beschreven. Deze inventory kan met de hand gevuld worden (dit zullen we gebruiken in deze workshop). Het is echter een best-practice om deze uit een bron automatisch te laten vullen (dynamic inventory). Enkele bronnen zijn:
 
 * Amazon EC2
 * VMware vCenter
 * Red Hat Satellite 6
+* NetBox
 
 Naast de bestaande bronnen, is het mogelijk om zelf een inventory script te maken. Zie https://docs.ansible.com/ansible/latest/dev_guide/developing_inventory.html voor meer informatie.
 
 ### Task 2.1: Inventory aanmaken
 
-* Log in op Ansible Tower met de aangeleverde credentials:
-** URL: http://{{ ANSIBLE_TOWER }}
-** Gebruikersnaam: {{ ANSIBLE_USER }}
-** Wachtwoord: {{ ANSIBLE_PASSWORD }}
+* Log in op AWX met je eigen credentials:
+** URL: http://?
+** Gebruikersnaam: Eigen Azure AD User
+** Wachtwoord: Eigen Azure AD Password
 +
-TIP: De ``Ansible Tower`` webinterface neemt de taalinstelling over van je webbrowser. Zet deze taalinstelling op ``Engels`` voor deze workshop
+TIP: De ``AWX`` webinterface neemt de taalinstelling over van je webbrowser. Zet deze taalinstelling op ``Engels`` voor deze workshop
 +
 * Klik ``Inventories`` (linkerkant)
 * Klik rechtsboven op het groene plus teken (``Create a new inventory``) en kies ``Inventory``
 +
 ====
-[#inventory_01]
-.Create a new inventory
-image::inventory_01.png[inventory]
-====
 +
 * Geef de inventory de naam ``Workshop-inventory``.
 * Klik ``Save`` 
 +
-====
-[#inventory_02]
-.Inventory
-image::inventory_02.png[inventory]
 ====
 
 ### Task 2.2: Hosts toevoegen
@@ -40,29 +33,14 @@ image::inventory_02.png[inventory]
 * Klik ``Hosts`` en klik op het groene plus teken (``Create a new host``)
 +
 ====
-[#inventory_03]
-.Create a new host
-image::inventory_03.png[inventory]
-====
 +
-* Vul de hostname (volledige fqdn) van de Ansible client ({{ ANSIBLE_CLIENT_1 }} in
+* Vul de hostname (volledige fqdn) van de Ansible client in
 +
-====
-[#inventory_04]
-.Hostname
-image::inventory_04.png[inventory]
 ====
 +
 * Herhaal de stappen met de overige 2 Ansible clients:
-** {{ ANSIBLE_CLIENT_2}}
-** {{ ANSIBLE_CLIENT_3}}
-
-====
-[#inventory_05]
-.Hosts
-image::inventory_05.png[inventory]
-====
-
+** 
+** 
 
 ### Task 2.3: Groepen definiëren
 
