--- a/01_NL_SCM.adoc
+++ b/01_NL_SCM.adoc
@@ -57,7 +57,7 @@ In je project:
 ----
 ---
 - name: Hello World Sample
-  hosts: all
+  hosts: {{ target_host }}
   tasks:
   - name: Hello Message
     debug:
