--- a/10_NL_AWX_job_tags.adoc
+++ b/10_NL_AWX_job_tags.adoc
@@ -50,7 +50,8 @@
     local_action:
       module: uri
       url: "http://{{ inventory_hostname }}/index.html"
-      status_code: 200            
+      status_code: 200   
+    become: false
     tags: 
     - webserver  
 
