--- a/10_NL_AWX_job_tags.adoc
+++ b/10_NL_AWX_job_tags.adoc
@@ -147,7 +147,7 @@
     - ntp
 ----
 
-=== Task 10.2: Template in Tower
+=== Task 10.2: Template in AWX
 
 * Maak een ``Job template`` aan: ``Webserver tags``
 ** Inventory: ``Webservers``
